<resources>
    <string name="app_name">WordsApp</string>
    <string name="few_words_in_dictionary">В словаре должно быть не менее 10 слов, чтобы начать тренировку.\nДобавьте новые и возвращайтесь!</string>
    <string name="no_words_to_learn">У вас нет слов для изучения.\nДобавьте новые и возвращайтесь!</string>
    <string name="failed_generate_question">Произошла ошибка во время создания вопроса, попробуйте еще раз!</string>
    <string name="learn_english_words">Learn\nEnglish\nWords</string>
    <string name="learn_words">Учить слова</string>
    <string name="dictionaries">Словари</string>
    <string name="statistics">Статистика</string>
    <string name="description_back_button">Это кнопка назад</string>
    <string name="description_menu_button">Это кнопка меню</string>
    <string name="choose_dictionary">Выберите словарь</string>
    <string name="choose_dictionary_to_study">Выберите словарь для изучения</string>
    <string name="teach_all_words">Учить все слова</string>
    <string name="option_01">01</string>
    <string name="option_02">02</string>
    <string name="option_03">03</string>
    <string name="option_04">04</string>
    <string name="skip">Пропустить</string>
    <string name="cancel">Отмена</string>
    <string name="next">Продолжить</string>
    <string name="save">Сохранить</string>
    <string name="have_problem">Ой, возникла проблема!</string>
    <string name="correct">Правильно!</string>
    <string name="wrong">Неправильно!</string>
    <string name="return_to_menu">Вернуться в меню</string>
    <string name="tv_words_learned">Выучено слов: %s</string>
    <string name="progress_template">%s/%s</string>
    <string name="description_add_dictionary_button">Это кнопка добавления нового словаря</string>
    <string name="detailed_statistics">Всего словарей: %s\nВсего слов: %s\nСлов выучено: %s\nПрогресс: %s%%</string>
    <string name="statistics_dictionary">Изучено %s из %s слов</string>
    <string name="count_repeat">%s/%s</string>
    <string name="enter_word">Введите cлово</string>
    <string name="enter_name">Введите название</string>
    <string name="translate">Перевод</string>
    <string name="adding_word">Добавление слова:</string>
    <string name="adding_dictionary">Добавление словаря:</string>
    <string name="rename_dictionary">Введите новое название словаря:</string>
    <string name="edit">Редактировать:</string>
    <string name="delete">Удалить</string>
    <string name="learn">Изучать</string>
    <string name="add_to_dictionary">Добавить в словарь</string>
    <string name="already_added_to_dictionary">Слово уже добавлено во все словари!</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="notification_title">Забыли о тренировках?</string>
    <string name="notification_text">Вы не учили слова уже больше суток, возвращайтесь!</string>
</resources>